{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 1915,
  "lineage": "53319340-8fe7-1d63-a39c-cdf41fd1c9eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "zendrix_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a5a67cc139b2702",
            "domain": "vpc",
            "id": "eipalloc-02a5a67cc139b2702",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-237-100-50.compute-1.amazonaws.com",
            "public_ip": "34.237.100.50",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "additional_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e00d6ac75d2ebb",
            "arn": "arn:aws:ec2:us-east-1:674463396899:instance/i-05b05bdb2031b6cdb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b05bdb2031b6cdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CDIIT",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fd17bff8b35ecab7",
            "private_dns": "ip-192-168-4-86.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-028dfbf557029bde3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01b800eec3281aeb1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa72222a23eea2c2",
            "tags": {
              "Company": "Zendrix",
              "Name": "k8s-master"
            },
            "tags_all": {
              "Company": "Zendrix",
              "Name": "k8s-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b800eec3281aeb1"
            ]
          },
          "dependencies": [
            "aws_security_group.mywebserver",
            "aws_subnet.zendrix_private_subnet_2",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "additional_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e00d6ac75d2ebb",
            "arn": "arn:aws:ec2:us-east-1:674463396899:instance/i-08a6a3f19023df0b2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a6a3f19023df0b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CDIIT",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04cb549ace9307ab8",
            "private_dns": "ip-192-168-4-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d0c76eb2b78b84af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01b800eec3281aeb1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa72222a23eea2c2",
            "tags": {
              "Company": "Zendrix",
              "Name": "k8s-worker"
            },
            "tags_all": {
              "Company": "Zendrix",
              "Name": "k8s-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b800eec3281aeb1"
            ]
          },
          "dependencies": [
            "aws_security_group.mywebserver",
            "aws_subnet.zendrix_private_subnet_2",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e00d6ac75d2ebb",
            "arn": "arn:aws:ec2:us-east-1:674463396899:instance/i-0e11c719f135a4baf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e11c719f135a4baf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CDIIT",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9ff87c4307be947",
            "private_dns": "ip-192-168-3-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.3.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe071ebc9e6eef32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01b800eec3281aeb1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2aba5a14a37a5ad",
            "tags": {
              "Company": "Zendrix",
              "Name": "zendrix-private-instance"
            },
            "tags_all": {
              "Company": "Zendrix",
              "Name": "zendrix-private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b800eec3281aeb1"
            ]
          },
          "dependencies": [
            "aws_security_group.mywebserver",
            "aws_subnet.zendrix_private_subnet_1",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e00d6ac75d2ebb",
            "arn": "arn:aws:ec2:us-east-1:674463396899:instance/i-0fbfc04c45ac2762b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbfc04c45ac2762b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CDIIT",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2ca839dc03e363c",
            "private_dns": "ip-192-168-1-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.254",
            "public_ip": "34.236.150.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041c6c9085b28b3d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01b800eec3281aeb1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0159987cfa6a7b6c9",
            "tags": {
              "Company": "Zendrix",
              "Name": "zendrix-public-instance"
            },
            "tags_all": {
              "Company": "Zendrix",
              "Name": "zendrix-public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b800eec3281aeb1"
            ]
          },
          "dependencies": [
            "aws_security_group.mywebserver",
            "aws_subnet.zendrix_public_subnet_1",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zendrix_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:internet-gateway/igw-0322b028f58377684",
            "id": "igw-0322b028f58377684",
            "owner_id": "674463396899",
            "tags": {
              "Name": "zendrix-igw"
            },
            "tags_all": {
              "Name": "zendrix-igw"
            },
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "dependencies": [
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "zendrix_app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:674463396899:loadbalancer/app/zendrix-app-lb/9dcbe319fffcb52e",
            "arn_suffix": "app/zendrix-app-lb/9dcbe319fffcb52e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "zendrix-app-lb-238813601.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:674463396899:loadbalancer/app/zendrix-app-lb/9dcbe319fffcb52e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zendrix-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01b800eec3281aeb1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0159987cfa6a7b6c9"
              },
              {
                "subnet_id": "subnet-0b9f4728d69844660"
              }
            ],
            "subnets": [
              "subnet-0159987cfa6a7b6c9",
              "subnet-0b9f4728d69844660"
            ],
            "tags": {
              "Name": "zendrix-app-lb"
            },
            "tags_all": {
              "Name": "zendrix-app-lb"
            },
            "vpc_id": "vpc-07bd5dd791f037aa0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.mywebserver",
            "aws_subnet.zendrix_public_subnet_1",
            "aws_subnet.zendrix_public_subnet_2",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "zendrix_app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:674463396899:listener/app/zendrix-app-lb/9dcbe319fffcb52e/829828d7c691ab51",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:674463396899:targetgroup/zen-tg20230410153049377000000003/9a5b0bd51641c683",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:674463396899:listener/app/zendrix-app-lb/9dcbe319fffcb52e/829828d7c691ab51",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:674463396899:loadbalancer/app/zendrix-app-lb/9dcbe319fffcb52e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.zendrix_app_lb",
            "aws_lb_target_group.zendrix_app_tg",
            "aws_security_group.mywebserver",
            "aws_subnet.zendrix_public_subnet_1",
            "aws_subnet.zendrix_public_subnet_2",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "zendrix_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:674463396899:targetgroup/zen-tg20230410153049377000000003/9a5b0bd51641c683",
            "arn_suffix": "targetgroup/zen-tg20230410153049377000000003/9a5b0bd51641c683",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:674463396899:targetgroup/zen-tg20230410153049377000000003/9a5b0bd51641c683",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "zen-tg20230410153049377000000003",
            "name_prefix": "zen-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "dependencies": [
            "aws_vpc.zendrix_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "zendrix_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a5a67cc139b2702",
            "connectivity_type": "public",
            "id": "nat-0e9795220ecad8055",
            "network_interface_id": "eni-01194c2301011855e",
            "private_ip": "192.168.1.141",
            "public_ip": "34.237.100.50",
            "subnet_id": "subnet-0159987cfa6a7b6c9",
            "tags": {
              "Name": "zendrix-nat-gw"
            },
            "tags_all": {
              "Name": "zendrix-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.zendrix_nat_eip",
            "aws_subnet.zendrix_public_subnet_1",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zendrix_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:route-table/rtb-03102c0a78832b32e",
            "id": "rtb-03102c0a78832b32e",
            "owner_id": "674463396899",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e9795220ecad8055",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zendrix-private-rt"
            },
            "tags_all": {
              "Name": "zendrix-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.zendrix_nat_eip",
            "aws_nat_gateway.zendrix_nat_gw",
            "aws_subnet.zendrix_public_subnet_1",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zendrix_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:route-table/rtb-0ed417d471f106c71",
            "id": "rtb-0ed417d471f106c71",
            "owner_id": "674463396899",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0322b028f58377684",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zendrix-public-rt"
            },
            "tags_all": {
              "Name": "zendrix-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.zendrix_igw",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db5701385e56ae86",
            "route_table_id": "rtb-0ed417d471f106c71",
            "subnet_id": "subnet-0159987cfa6a7b6c9"
          },
          "dependencies": [
            "aws_internet_gateway.zendrix_igw",
            "aws_route_table.zendrix_public_rt",
            "aws_subnet.zendrix_public_subnet_1",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e50cc44e63e12ed9",
            "route_table_id": "rtb-0ed417d471f106c71",
            "subnet_id": "subnet-0b9f4728d69844660"
          },
          "dependencies": [
            "aws_internet_gateway.zendrix_igw",
            "aws_route_table.zendrix_public_rt",
            "aws_subnet.zendrix_public_subnet_2",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zendrix_private_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f484b06053e77a4a",
            "route_table_id": "rtb-03102c0a78832b32e",
            "subnet_id": "subnet-0b2aba5a14a37a5ad"
          },
          "dependencies": [
            "aws_eip.zendrix_nat_eip",
            "aws_nat_gateway.zendrix_nat_gw",
            "aws_route_table.zendrix_private_rt",
            "aws_subnet.zendrix_private_subnet_1",
            "aws_subnet.zendrix_public_subnet_1",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zendrix_private_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e00f30c7975c530b",
            "route_table_id": "rtb-03102c0a78832b32e",
            "subnet_id": "subnet-0fa72222a23eea2c2"
          },
          "dependencies": [
            "aws_eip.zendrix_nat_eip",
            "aws_nat_gateway.zendrix_nat_gw",
            "aws_route_table.zendrix_private_rt",
            "aws_subnet.zendrix_private_subnet_2",
            "aws_subnet.zendrix_public_subnet_1",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mywebserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:security-group/sg-01b800eec3281aeb1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b800eec3281aeb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "mywebserver",
            "name_prefix": "",
            "owner_id": "674463396899",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mywebserver"
            },
            "tags_all": {
              "Name": "mywebserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zendrix_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:security-group/sg-0b2a1599936cbff44",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2a1599936cbff44",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.3.0/24",
                  "192.168.4.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "zendrix-rds-sg",
            "name_prefix": "",
            "owner_id": "674463396899",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.zendrix_private_subnet_1",
            "aws_subnet.zendrix_private_subnet_2",
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zendrix_efs_mount_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:security-group/sg-023063be7ca444364",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023063be7ca444364",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "zendrix-efs-sg",
            "name_prefix": "",
            "owner_id": "674463396899",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zendrix_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:subnet/subnet-0b2aba5a14a37a5ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2aba5a14a37a5ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674463396899",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zendrix-private-subnet"
            },
            "tags_all": {
              "Name": "zendrix-private-subnet"
            },
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "dependencies": [
            "aws_vpc.zendrix_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zendrix_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:subnet/subnet-0fa72222a23eea2c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa72222a23eea2c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674463396899",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zendrix-private-subnet-2"
            },
            "tags_all": {
              "Name": "zendrix-private-subnet-2"
            },
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "dependencies": [
            "aws_vpc.zendrix_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zendrix_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:subnet/subnet-0159987cfa6a7b6c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0159987cfa6a7b6c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674463396899",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zendrix-public-subnet"
            },
            "tags_all": {
              "Name": "zendrix-public-subnet"
            },
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "dependencies": [
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zendrix_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:subnet/subnet-0b9f4728d69844660",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9f4728d69844660",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674463396899",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zendrix-public-subnet-2"
            },
            "tags_all": {
              "Name": "zendrix-public-subnet-2"
            },
            "vpc_id": "vpc-07bd5dd791f037aa0"
          },
          "dependencies": [
            "aws_vpc.zendrix_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zendrix_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674463396899:vpc/vpc-07bd5dd791f037aa0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0653a21f494099888",
            "default_route_table_id": "rtb-0bca3e5623a9edcde",
            "default_security_group_id": "sg-0e6a7d704f5fa571b",
            "dhcp_options_id": "dopt-6783e002",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07bd5dd791f037aa0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bca3e5623a9edcde",
            "owner_id": "674463396899",
            "tags": {
              "Name": "zendrix-vpc"
            },
            "tags_all": {
              "Name": "zendrix-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}